# bde

./: .gitignore  Cargo.toml  README.md  bde.yaml
.github/workflows/: general.yml
.run/: Run bde.run.xml
examples/output/: Oauth.php  Users.php
examples/queries/: users.sql
examples/schemas/: schema.sql
src/: configuration.rs  lib.rs  main.rs
src/analyzer/: mod.rs  php_types.rs  schema.rs  types.rs
src/generator/: engine.rs  mod.rs
src/parser/: extract_query_info.rs  mod.rs  query.rs  sql.rs
templates/: entity_class.html  entity_class.php  queries_class.html  queries_class.php  query_function.html  query_function.php
tests/: query_parser.rs  schema_analyzer.rs
